# milkyway_plot

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  changelog.md  index.html  mw_plot.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci_tests.yml  pypi.yml
docs/: requirements.txt
docs/source/: basics.rst  bokeh_single.rst  changelog.rst  conf.py  index.rst  matplotlib_faceon.rst  matplotlib_gallery.rst  matplotlib_multi.rst  matplotlib_single.rst  matplotlib_skymap.rst
docs/source/_templates/: layout.html
mw_plot/: __init__.py  mw_plot.py  mw_plot_bokeh.py  mw_plot_classes.py  mw_plot_masters.py  mw_plot_matplotlib.py
src/mw_plot/: __init__.py  base.py  bokeh_backend.py  matplotlib_backend.py  mplstyle.mplstyle  mw_plot_base.py  mw_plot_bokeh.py  mw_plot_masters.py  mw_plot_matplotlib.py  utils.py
tests/: conftest.py  simbad_warmup.py  test_bokeh.py  test_mpl.py  test_mwplot.py  test_mwplot_bokeh.py  test_mwplot_mpl.py
